fixed image hover effect getting applied on mobile screens

--- a/app/components/Highlights/Card/Card.module.scss
+++ b/app/components/Highlights/Card/Card.module.scss
@@ -58,6 +58,10 @@
 
         &:hover {
             background-color: rgba(0, 0, 0);
+
+            ~.imageOverlay {
+                display: flex;
+            }
         }
     }
 
@@ -106,16 +110,15 @@
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.7);
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
-    opacity: 0;
     transition: opacity 0.3s ease;
     z-index: 3;
-}
 
-.cardImage:hover .imageOverlay {
-    opacity: 1;
+    &:hover {
+        display: flex;
+    }
 }
 
 .statsGrid {
